[gd_scene load_steps=23 format=3 uid="uid://b4mad3tyoy3e3"]

[ext_resource type="PackedScene" uid="uid://cxm8ccp38p802" path="res://scenes/component/health_component.tscn" id="1_4jk3l"]
[ext_resource type="Texture2D" uid="uid://bdxpfiqa36bg4" path="res://scenes/game_object/wizard_enemy/wizard_enemy.png" id="1_43j36"]
[ext_resource type="Script" uid="uid://bdgbkeegrt6p2" path="res://scenes/game_object/wizard_enemy/wizard_enemy.gd" id="1_qct4f"]
[ext_resource type="PackedScene" uid="uid://xynltio0cny4" path="res://scenes/component/death_component.tscn" id="2_865ah"]
[ext_resource type="PackedScene" uid="uid://ej3mggt50ceo" path="res://scenes/component/velocity_component.tscn" id="2_qgqx6"]
[ext_resource type="PackedScene" uid="uid://bmccufxtk4ga4" path="res://scenes/component/hurtbox_component.tscn" id="4_865ah"]
[ext_resource type="PackedScene" uid="uid://c0nawp1nhvd43" path="res://scenes/component/vial_drop_component.tscn" id="4_rquut"]
[ext_resource type="PackedScene" uid="uid://cy12g26ysdlwk" path="res://scenes/game_object/experience_vial/experience_vial.tscn" id="5_sjtyn"]
[ext_resource type="PackedScene" uid="uid://5soxbq72kjwl" path="res://scenes/component/hit_flash_component.tscn" id="6_h4ano"]
[ext_resource type="Shader" uid="uid://cacol6amg77uo" path="res://scenes/component/hit_flash_component.gdshader" id="7_hcfsk"]
[ext_resource type="PackedScene" uid="uid://deek1n1ds5r0y" path="res://scenes/component/random_stream_player_2d_component.tscn" id="11_vrtha"]
[ext_resource type="AudioStream" uid="uid://u35aesgo14dl" path="res://assets/audio/footstep_carpet_000.ogg" id="12_ka3t7"]
[ext_resource type="AudioStream" uid="uid://dbnftjnd6d7bq" path="res://assets/audio/footstep_carpet_001.ogg" id="13_8twg8"]
[ext_resource type="AudioStream" uid="uid://evajcqmv3eap" path="res://assets/audio/footstep_carpet_002.ogg" id="14_mk8uf"]
[ext_resource type="AudioStream" uid="uid://dp0mo32obpy2c" path="res://assets/audio/footstep_carpet_003.ogg" id="15_02quh"]
[ext_resource type="AudioStream" uid="uid://cxjupncfht1fo" path="res://assets/audio/footstep_carpet_004.ogg" id="16_rg2qm"]

[sub_resource type="Animation" id="Animation_74qiw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_sjtyn"]
resource_name = "walk"
length = 0.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1.7411, 3.73213, 1),
"update": 0,
"values": [0.0, -0.174533, 0.261799]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(1.5, 0.8), Vector2(0.9, 1.1)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.05, 0.3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_is_moving"
}, {
"args": [false],
"method": &"set_is_moving"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h4ano"]
_data = {
&"RESET": SubResource("Animation_74qiw"),
&"walk": SubResource("Animation_sjtyn")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k7l2p"]
resource_local_to_scene = true
shader = ExtResource("7_hcfsk")
shader_parameter/lerp_percent = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qgqx6"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qct4f"]
radius = 4.0

[node name="WizardEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 8
script = ExtResource("1_qct4f")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_h4ano")
}
autoplay = "walk"

[node name="HealthComponent" parent="." instance=ExtResource("1_4jk3l")]
max_health = 15.0

[node name="VelocityComponent" parent="." instance=ExtResource("2_qgqx6")]
max_speed = 60
acceleration = 200.0

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_rquut")]
health_component = NodePath("../HealthComponent")
vail_scene = ExtResource("5_sjtyn")

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("6_h4ano")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_k7l2p")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("2_865ah")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_43j36")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_865ah")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
visible = false
light_mask = 0
visibility_layer = 4
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_qgqx6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
light_mask = 0
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_qct4f")

[node name="HitRandomAudioPlayerComponent" parent="." instance=ExtResource("11_vrtha")]
autoplay = true
streams = Array[AudioStream]([ExtResource("12_ka3t7"), ExtResource("13_8twg8"), ExtResource("14_mk8uf"), ExtResource("15_02quh"), ExtResource("16_rg2qm")])
